Add: Edit/Remove/Add products

--- a/src/app/components/pages/edit-product-page/edit-product-page.component.html
+++ b/src/app/components/pages/edit-product-page/edit-product-page.component.html
@@ -1,6 +1,6 @@
 <div class="back-content">
     <main>
-        <h1>Cadastrar</h1>
+        <h1>Editar</h1>
         <div class="ice-cream">
             <form [formGroup]="form">
                 <mat-form-field class="w-100">
@@ -21,7 +21,7 @@
                 <br />
                 <div class="d-flex flex-row gap-10">
                     <button mat-flat-button (click)="onCancel()">Cancelar</button>
-                    <button mat-flat-button (click)="onConfirm()">Cadastrar</button>
+                    <button mat-flat-button (click)="onConfirm()">Alterar</button>
                 </div>
             </form>
         </div>
