Add: Search filters

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,7 @@
     <hr>
     <nav>
       <ul>
-        <li><a >Dashboard</a></li>
-        <li><a [routerLink]="['products']">Produtos</a></li>
+        <li><a [routerLink]="['products']" routerLinkActive="active">Produtos</a></li>
       </ul>
     </nav>
   </mat-drawer>
