--- a/src/app/components/pages/product-list-page/product-list-page.component.scss
+++ b/src/app/components/pages/product-list-page/product-list-page.component.scss
@@ -26,6 +26,12 @@ h1 {
     padding: 10px;
     background-color: white;
     border-radius: 8px 8px 0 0;
+    form {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
 }
 
 .product-list-container {
@@ -43,6 +49,9 @@ h1 {
 .w-100 {
     width: 100%;
 }
+.price {
+    width: 250px;
+}
 
 .p-10 {
     padding: 10px;
@@ -54,6 +63,10 @@ h1 {
 
 .flex-row {
     flex-direction: row;
+}
+
+.left-control {
+    border-radius: 8px 0px 0px 0px !important;
 }
 
 .justify-content-between {
